Fixed issue: puzzle img fixed on horizontal scroll

--- a/src/views/PuzzleList/PuzzleList.styl
+++ b/src/views/PuzzleList/PuzzleList.styl
@@ -25,6 +25,10 @@
     align-items: center;
     padding: 0 1rem;
 
+    table {
+        overflow: hidden;
+    }
+
 
     .puzzle-list-container {
         width: 100%;
@@ -39,18 +43,18 @@
     }
 
     .MiniGoban {
-        height: 64px;
+        height: 0;
         width: 64px;
-        margin: 0.4rem 0 -0.6rem;
+        margin-top: 20px;
+        transform: translateY(20px)
         overflow: visible;
+        background-color: red;
 
         .inner-container {
-            position: absolute;
             overflow: visible;
         }
     }
     .icon {
-        padding: 0.2rem;
         text-align: center;
     }
     .rating-count {
